--- a/4.6.23 CW верстка + git/4.6.23.html
+++ b/4.6.23 CW верстка + git/4.6.23.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="4.6.23.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="4.6.23.css" />
+    <title>ttttttttt</title>
 </head>
 <body>
-    <h1>My first repository</h1>
+    <header class="header">
+        <nav><ul>
+            <li>Home</li>
+            <li>Friends</li>
+            <li>News</li>
+        </ul></nav>
+    </header>
 </body>
 </html>
